chore: minor update

--- a/client/src/app/pages/home/home.component.html
+++ b/client/src/app/pages/home/home.component.html
@@ -51,8 +51,8 @@
 
   <app-modal>
     <div class="flex justify-end gap-x-5 mt-5">
-      <app-button (clicked)="modalService.close()">Cancel</app-button>
-      <app-button (clicked)="goToPrivateUpload()">Drop My Chain</app-button>
+      <app-button (clicked)="modalService.close()">Stay Tuned</app-button>
+      <!-- <app-button (clicked)="goToPrivateUpload()">Drop My Chain</app-button> -->
     </div>
   </app-modal>
 </app-main-layout>
